# PLCOpenXML

./: .gitignore  Test.xml  Test_updated.xml  extract_st.py  insert_changes.py  license.txt
.github/workflows/: workflow.yml
PLCOpenXML/: DESCRIPTION.md  MANIFEST.in  README.md  Test.xml  example_usage.py  pyproject.toml  setup.py
PLCOpenXML/.github/workflows/: workflow.yml
PLCOpenXML/plcopen/: __init__.py  inserter.py  models.py
PLCOpenXML/plcopen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
PLCOpenXML/plcopener/: cli.py  extractor.py
PLCOpenXML/plcopener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plcopener/: __init__.py  extractor.py  inserter.py  st_parser.py  xml_utils.py
